; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_array.c_Array_toString.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_array.c_Array_toString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@.str = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@JS_E_ARRAY_EXPECTED = common dso_local global i32 0, align 4
@default_separatorW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32, i32, i32*, i32*)* @Array_toString to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Array_toString(i32* %0, i32* %1, i32 %2, i32 %3, i32* %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32* %4, i32** %12, align 8
  store i32* %5, i32** %13, align 8
  %15 = call i32 @TRACE(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %16 = load i32*, i32** %9, align 8
  %17 = call %struct.TYPE_3__* @array_this(i32* %16)
  store %struct.TYPE_3__* %17, %struct.TYPE_3__** %14, align 8
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %19 = icmp ne %struct.TYPE_3__* %18, null
  br i1 %19, label %24, label %20

20:                                               ; preds = %6
  %21 = load i32*, i32** %8, align 8
  %22 = load i32, i32* @JS_E_ARRAY_EXPECTED, align 4
  %23 = call i32 @throw_type_error(i32* %21, i32 %22, i32* null)
  store i32 %23, i32* %7, align 4
  br label %36

24:                                               ; preds = %6
  %25 = load i32*, i32** %8, align 8
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 1
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = load i32, i32* @default_separatorW, align 4
  %32 = load i32, i32* @default_separatorW, align 4
  %33 = call i32 @lstrlenW(i32 %32)
  %34 = load i32*, i32** %13, align 8
  %35 = call i32 @array_join(i32* %25, i32* %27, i32 %30, i32 %31, i32 %33, i32* %34)
  store i32 %35, i32* %7, align 4
  br label %36

36:                                               ; preds = %24, %20
  %37 = load i32, i32* %7, align 4
  ret i32 %37
}

declare dso_local i32 @TRACE(i8*) #1

declare dso_local %struct.TYPE_3__* @array_this(i32*) #1

declare dso_local i32 @throw_type_error(i32*, i32, i32*) #1

declare dso_local i32 @array_join(i32*, i32*, i32, i32, i32, i32*) #1

declare dso_local i32 @lstrlenW(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
